# russian-nlp-sandbox

./: .gitignore  LICENSE  pyproject.toml  trankit_lemmatize.py
natasha/: lemmatize.py  pyproject.toml
source/: 19410703_stalin_speech.toml  unknown_words_test.toml
spacy/: lemmatize.py  pyproject.toml
stanza/: lemmatize.py  pyproject.toml
trankit/: lemmatize.py  pyproject.toml
